# mav_control_rw

./: .gitignore
mav_control_interface/src/: mav_control_interface_impl.cpp  mav_control_interface_impl.h  position_controller_interface.cpp  state_machine.cpp  state_machine.cpp~  state_machine.h  state_machine.h~
mav_modified_rodrigues_nmpc/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
mav_modified_rodrigues_nmpc/cfg/: NonLinearMPC.cfg  NonLinearMPC.cfg~
mav_modified_rodrigues_nmpc/include/mav_modified_rodrigues_nmpc/: modified_rodrigues_nmpc.h  modified_rodrigues_nmpc.h~  modified_rodrigues_nmpc_node.h  modified_rodrigues_nmpc_node.h~  variable_pitch_nmpc.h~  variable_pitch_nmpc_node.h~
mav_modified_rodrigues_nmpc/launch/: mav_modified_rodrigues_nmpc.launch  mav_modified_rodrigues_nmpc.launch~  mav_modified_rodrigues_nmpc_sim.launch  mav_modified_rodrigues_nmpc_sim.launch~  mav_modified_rodrigues_nmpc_sim_8traj.launch  mav_nonlinear_mpc.launch~  mav_nonlinear_mpc_sim.launch~  mav_variable_pitch_nmpc_sim.launch~
mav_modified_rodrigues_nmpc/resources/: modified_rodrigues_nmpc_hummingbird.yaml  modified_rodrigues_nmpc_hummingbird.yaml~  modified_rodrigues_nmpc_neo11.yaml  modified_rodrigues_nmpc_neo11.yaml~  variable_pitch_nmpc_hummingbird.yaml~
mav_modified_rodrigues_nmpc/solver/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c  mav_modified_rodrigues_nmpc.cpp  nmpc_solver_setup_mrp.m  nmpc_solver_setup_mrp_Neo11.m  nmpc_solver_setup_mrp_hex.m  nmpc_solver_setup_mrp_hex.m~  nmpc_solver_setup_mrp_hex_notError.m  nmpc_solver_setup_mrp_hex_notError.m~  nmpc_solver_setup_mrp_hex_shadow.m  nmpc_solver_setup_mrp_hex_shadow.m~  nmpc_solver_setup_mrp_hummingbird.m  nmpc_solver_setup_mrp_notError.m  nmpc_solver_setup_mrp_notError.m~
mav_modified_rodrigues_nmpc/src/: modified_rodrigues_nmpc.cc  modified_rodrigues_nmpc.cc~  modified_rodrigues_nmpc_node.cc  modified_rodrigues_nmpc_node.cc~  ref_trajectory_node.cpp  ref_trajectory_node.cpp~  variable_pitch_nmpc.cc~  variable_pitch_nmpc_node.cc~
mav_quaternion_nmpc/: CMakeLists.txt  package.xml
mav_quaternion_nmpc/cfg/: NonLinearMPC.cfg
mav_quaternion_nmpc/launch/: mav_quaternion_nmpc.launch  mav_quaternion_nmpc_sim.launch
mav_quaternion_nmpc/resources/: quaternion_nmpc_hummingbird.yaml
mav_quaternion_nmpc/solver/: acado_common.h  acado_integrator.c  acado_solver.c  mav_quaternion_nmpc.cpp  nmpc_solver_setup_hummingbird.m
(+5 files in other folders)
